--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,13 @@ dependencies:
 
   cupertino_icons: ^1.0.8
 
+
+  pin_code_fields: ^8.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
